Fix Vercel deployment configuration for Angular 19
- Updated vercel.json for Angular 19 compatibility
- Changed outputDirectory to dist/todo-frontend/browser
- Replaced routes with rewrites for SPA routing
- Should fix 404 NOT_FOUND error on Vercel

Also added:
- BACKEND-DEPLOY-STATUS.md - backend deployment status
- MONGODB-ATLAS-FIX.md - MongoDB Atlas troubleshooting guide
- Updated PROJECT-CONTEXT.md with current deployment progress

--- a/todo-frontend/vercel.json
+++ b/todo-frontend/vercel.json
@@ -1,23 +1,14 @@
 {
   "version": 2,
   "name": "todo-frontend",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist/todo-frontend"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
   "buildCommand": "npm run build",
-  "outputDirectory": "dist/todo-frontend",
+  "outputDirectory": "dist/todo-frontend/browser",
   "installCommand": "npm install",
-  "framework": "angular"
+  "framework": "angular",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
